[01/c, 01/d] how to load a plugin II

--- a/01_simple_plugin/src/a_simple_plugin_example/CMakeLists.txt
+++ b/01_simple_plugin/src/a_simple_plugin_example/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.0.2)
 project(a_simple_plugin_example)
 find_package(catkin REQUIRED COMPONENTS pluginlib roscpp)
 
+# this arguments are REQUIRED to use this resoureces in other packages
 catkin_package(INCLUDE_DIRS include LIBRARIES plugin_triangle polygons)
 
 include_directories(include ${catkin_INCLUDE_DIRS})
@@ -9,5 +10,3 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 add_library(plugin_triangle src/plugin_triangle.cpp)
 
 add_library(polygons src/plugin_base_class.cpp)
-# add_executable(${PROJECT_NAME}_node src/a_simple_plugin_example_node.cpp)
-# target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES} )
